--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <body style="background-color: #0d041a">
   <li style="color: rgb(18, 228, 18)">nema invis walls</li>
-  <li style="color: rgb(219, 91, 91)">200cc</li>
-  <li style="color: rgb(219, 91, 91)">300cc</li>
-  <li style="color: rgb(219, 91, 91)">400cc</li>
-  <li style="color: rgb(219, 91, 91)">99999cc</li>
+  <li style="color: rgb(219, 91, 91)">[[2/3/4]00 / 99999]cc {4 bita}</li>
   <li style="color: rgb(219, 91, 91)">sve backwards</li>
   <li style="color: rgb(219, 91, 91)">item rain</li>
   <li style="color: rgb(219, 91, 91)">obrnuti drift</li>
   <li style="color: rgb(219, 91, 91)">sve ima mushroom physics</li>
+  <li style="color: rgb(219, 91, 91)">[visoka / niska] gravitacija {2 bita}</li>
+  <li style="color: rgb(219, 91, 91)">cpu-i brzi u pm</li>
+  <li style="color: rgb(219, 91, 91)">[0-255] krugova {8 bitova}</li>
 </body>
