--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <li style="color: rgb(219, 91, 91)">sve ima mushroom physics</li>
   <li style="color: rgb(219, 91, 91)">[visoka / niska] gravitacija {2 bita}</li>
   <li style="color: rgb(219, 91, 91)">cpu-i brzi u pm</li>
-  <li style="color: rgb(219, 91, 91)">[0-255] krugova {8 bitova}</li>
+  <li style="color: rgb(219, 91, 91)">[0:127] + 1 krugova {7 bitova}</li>
+  <li style="color: rgb(219, 91, 91)">spustila se gusta magla</li>
+  <li style="color: rgb(219, 91, 91)">mrak svudje</li>
+  <li style="color: rgb(219, 91, 91)">feather item</li>
+  <li style="color: rgb(219, 91, 91)">random teleport item</li>
+  <li style="color: rgb(219, 91, 91)">0 weight</li>
+  <li style="color: rgb(219, 91, 91)">floor is lava</li>
+  <h5>zauzeto 20/32 bitova</h5>
 </body>
